--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
-name: native_flutter_proxy
-description: A flutter plugin to read and set network proxy info from native.
-version: 0.2.3
-homepage: https://github.com/victorblaess/native_flutter_proxy
+name: anti_mitm
+description: A flutter plugin to detect if the mobile device is connected to a proxy or VPN.
+version: 0.0.2
+homepage: https://thanhdt.dev
+repository: https://github.com/thanhdang198/anti_mitm
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
